ESB-1012 - Add Web Dynamic form plugin, add Legacy Plugins menu and structured menuItem support in component.xml   Introduce a "Legacy Plugins" menu in the App Builder sidebar to group legacy plugin entries (e.g. Web Dynamic Forms) under a single collapsible section with plugin name headers and separators. Extend component.xml schema (componentDef-7.5.xsd) with <menuItem> elements to declare structured menu entries. Refactor /system/legacy-components-menu endpoint to aggregate menu items by appBuilderMenu.hook cms.   Migrate contentscheduler, contentworkflow, and webdynamicform plugins from flat properties to the new <menuItem> format.